--- a/src/main/resources/templates/calculator.html
+++ b/src/main/resources/templates/calculator.html
@@ -53,7 +53,7 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="text-center my-4">Calculatrice</h1>
+    <h1 class="text-center my-4">Calculatrice avec Plugins :</h1>
     <div class="row">
         <!-- Calculatrice à gauche -->
         <div class="col-md-6">
